--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+/*
+colors{
+	#106284
+	#001525
+}
+*/
 *{
 	direction:rtl;
 	margin:0;
@@ -5,29 +11,30 @@
 }
 body{
 	direction:rtl;
-	background:#000;
+	background-color:#001525;
+	background-image:url(../imgs/pattern.png);
+	font-family:Tahoma, Geneva, sans-serif;
 }
 .main_wrapper{
 
 }
 .main_container{
 	width:900px;
-	margin:auto;
+	margin:30px auto;
 }
 #body_header{
 	width:100%;
-	height:100px;
-	background-color:#111;
+	height:76px;
 }
 	#obj_logo{
-		width:350px;
-		height:100px;
+		width:370px;
+		height:76px;
 		float:left;
-		background-color:#333;
+		background:url(../imgs/logo.png);
 	}
 	#obj_user_login{
 		width:350px;
-		height:100px;
+		height:76px;
 		float:right;
 		background-color:#333;
 	}
@@ -44,6 +51,7 @@ body{
 	#obj_menu{
 		list-style:none;
 		direction:rtl;
+		margin:0px 20px 0px 20px;
 	}
 		#obj_menu li{
 			float:right;
@@ -51,14 +59,19 @@ body{
 		#obj_menu li a{
 			display:block;
 			height:50px;
-			padding:0px 15px 0px 15px;
+			padding:0px 10px 0px 10px;
+			margin:0px 5px 0px 5px;
 			line-height:50px;
+			font-size:14pt;
 			text-decoration:none;
-			color:#000;
-			background-color:#999;
+			color:#106284;
+		}
+		#obj_menu li a:hover{
+			background-color:#222;
+			font-size:bold;
 		}
 		#obj_menu li a.active{
-			background-color:#FFF;
+			background-color:#fff;
 		}
 #body_content{
 	width:100%;
