--- a/css/main.css
+++ b/css/main.css
@@ -11,16 +11,26 @@ colors{
 }
 body{
 	direction:rtl;
-	background-color:#001525;
-	background-image:url(../imgs/pattern.png);
 	font-family:Tahoma, Geneva, sans-serif;
+	background: #919191; /* Old browsers */
+	background: -moz-linear-gradient(top,  #919191 0%, #dbdbdb 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#919191), color-stop(100%,#dbdbdb)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #919191 0%,#dbdbdb 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #919191 0%,#dbdbdb 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #919191 0%,#dbdbdb 100%); /* IE10+ */
+	background: linear-gradient(top,  #919191 0%,#dbdbdb 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#919191', endColorstr='#dbdbdb',GradientType=0 ); /* IE6-9 */
+
+	height:auto;
+	background-attachment:fixed;
+
 }
 .main_wrapper{
 
 }
 .main_container{
 	width:900px;
-	margin:30px auto;
+	margin:20px auto;
 }
 #body_header{
 	width:100%;
@@ -46,32 +56,61 @@ body{
 			}
 #body_navbar{
 	width:100%;
-	height:50px;
+	height:70px;
+	margin-top:5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	box-shadow:0px 2px 5px #000;
+	background: #e8e8e8; /* Old browsers */
+	background: -moz-linear-gradient(top, #e8e8e8 0%, #b7b7b7 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e8e8e8), color-stop(100%,#b7b7b7)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #e8e8e8 0%,#b7b7b7 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #e8e8e8 0%,#b7b7b7 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #e8e8e8 0%,#b7b7b7 100%); /* IE10+ */
+	background: linear-gradient(top, #e8e8e8 0%,#b7b7b7 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8e8e8', endColorstr='#b7b7b7',GradientType=0 ); /* IE6-9 */
 }
 	#obj_menu{
 		list-style:none;
 		direction:rtl;
-		margin:0px 20px 0px 20px;
 	}
 		#obj_menu li{
 			float:right;
 		}
 		#obj_menu li a{
 			display:block;
-			height:50px;
-			padding:0px 10px 0px 10px;
-			margin:0px 5px 0px 5px;
-			line-height:50px;
+			height:70px;
+			padding:0px 22px 0px 22px;
+			line-height:70px;
 			font-size:14pt;
 			text-decoration:none;
-			color:#106284;
+			border-left:1px solid #333;
+			color:#000;
+			text-shadow:2px 2px 0px #FFFFFF;
 		}
 		#obj_menu li a:hover{
-			background-color:#222;
-			font-size:bold;
+			background: rgb(232,232,232); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(232,232,232,1) 0%, rgba(127,127,127,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(232,232,232,1)), color-stop(100%,rgba(127,127,127,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(232,232,232,1) 0%,rgba(127,127,127,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(232,232,232,1) 0%,rgba(127,127,127,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(232,232,232,1) 0%,rgba(127,127,127,1) 100%); /* IE10+ */
+background: linear-gradient(top,  rgba(232,232,232,1) 0%,rgba(127,127,127,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8e8e8', endColorstr='#7f7f7f',GradientType=0 ); /* IE6-9 */
+
+
 		}
 		#obj_menu li a.active{
-			background-color:#fff;
+			
+		}
+		#obj_menu li a.first{
+			-webkit-border-top-right-radius: 5px;
+			-webkit-border-bottom-right-radius: 5px;
+			-moz-border-radius-topright: 5px;
+			-moz-border-radius-bottomright: 5px;
+			border-top-right-radius: 5px;
+			border-bottom-right-radius: 5px;
 		}
 #body_content{
 	width:100%;
