--- a/css/main.css
+++ b/css/main.css
@@ -24,11 +24,13 @@ body{
 	color:#000;
 	height:auto;
 	background-attachment:fixed;
-
 }
+a{color:#000;}a:hover{color:#FFF;text-shadow:1px 1px 0px #000;}
 input[type="text"], input[type="password"], input[type="submit"]{
 	padding:5px;
+	margin:2px;
 	border:none;
+	line-height:20px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -84,7 +86,6 @@ input[type="submit"]:hover{
 		width:350px;
 		height:80px;
 		float:right;
-		background-color:#333;
 	}
 		#obj_user_login form{
 			margin:10px;
