--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,12 @@ input[type="text"], input[type="password"], input[type="submit"]{
 	background: linear-gradient(top, #e8e8e8 0%,#b7b7b7 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8e8e8', endColorstr='#b7b7b7',GradientType=0 ); /* IE6-9 */
 }
+
+input[type="text"], input[type="password"]
+{
+    width: 150px;
+}
+
 input[type="text"]:focus, input[type="password"]:focus{
 	background: rgb(232,232,232); /* Old browsers */
 	background: -moz-linear-gradient(top,  rgba(232,232,232,1) 0%, rgba(127,127,127,1) 100%); /* FF3.6+ */
@@ -90,6 +96,7 @@ input[type="submit"]:hover{
 		#obj_user_login form{
 			margin:10px;
 		}
+        
 #body_navbar{
 	width:100%;
 	height:70px;
