--- a/css/main.css
+++ b/css/main.css
@@ -4,33 +4,27 @@ colors{
 	#001525
 }
 */
-*{
-	direction:rtl;
-	margin:0;
-	padding:0;
-	text-decoration:none;
-}
+*{direction:rtl;margin:0;padding:0;text-decoration:none;behavior:url(border-radius.htc);}
 body{
 	direction:rtl;
 	font-family:Tahoma, Geneva, sans-serif;
-	background: #919191; /* Old browsers */
-	background: -moz-linear-gradient(top,  #919191 0%, #dbdbdb 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#919191), color-stop(100%,#dbdbdb)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #919191 0%,#dbdbdb 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #919191 0%,#dbdbdb 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #919191 0%,#dbdbdb 100%); /* IE10+ */
-	background: linear-gradient(top,  #919191 0%,#dbdbdb 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#919191', endColorstr='#dbdbdb',GradientType=0 ); /* IE6-9 */
+background: rgb(107,107,107); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(107,107,107,1) 1%, rgba(178,178,178,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(107,107,107,1)), color-stop(100%,rgba(178,178,178,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(107,107,107,1) 1%,rgba(178,178,178,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(107,107,107,1) 1%,rgba(178,178,178,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(107,107,107,1) 1%,rgba(178,178,178,1) 100%); /* IE10+ */
+background: linear-gradient(top,  rgba(107,107,107,1) 1%,rgba(178,178,178,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6b6b6b', endColorstr='#b2b2b2',GradientType=0 ); /* IE6-9 */
 	color:#000;
 	height:auto;
 	background-attachment:fixed;
 }
 a{color:#000;}a:hover{color:#FFF;text-shadow:1px 1px 0px #000;}
-input[type="text"], input[type="password"], input[type="submit"]{
+input{
 	padding:5px;
 	margin:2px;
 	border:none;
-	line-height:20px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -44,13 +38,7 @@ input[type="text"], input[type="password"], input[type="submit"]{
 	background: linear-gradient(top, #e8e8e8 0%,#b7b7b7 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8e8e8', endColorstr='#b7b7b7',GradientType=0 ); /* IE6-9 */
 }
-
-input[type="text"], input[type="password"]
-{
-    width: 150px;
-}
-
-input[type="text"]:focus, input[type="password"]:focus{
+input:focus{
 	background: rgb(232,232,232); /* Old browsers */
 	background: -moz-linear-gradient(top,  rgba(232,232,232,1) 0%, rgba(127,127,127,1) 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(232,232,232,1)), color-stop(100%,rgba(127,127,127,1))); /* Chrome,Safari4+ */
@@ -59,9 +47,12 @@ input[type="text"]:focus, input[type="password"]:focus{
 	background: -ms-linear-gradient(top,  rgba(232,232,232,1) 0%,rgba(127,127,127,1) 100%); /* IE10+ */
 	background: linear-gradient(top,  rgba(232,232,232,1) 0%,rgba(127,127,127,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8e8e8', endColorstr='#7f7f7f',GradientType=0 ); /* IE6-9 */
+}
+input[type="submit"]{
+	font-size:14pt;
+	cursor:pointer;
 }
 input[type="submit"]:hover{
-	cursor:pointer;
 	background: rgb(232,232,232); /* Old browsers */
 	background: -moz-linear-gradient(top,  rgba(232,232,232,1) 0%, rgba(127,127,127,1) 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(232,232,232,1)), color-stop(100%,rgba(127,127,127,1))); /* Chrome,Safari4+ */
@@ -71,13 +62,14 @@ input[type="submit"]:hover{
 	background: linear-gradient(top,  rgba(232,232,232,1) 0%,rgba(127,127,127,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8e8e8', endColorstr='#7f7f7f',GradientType=0 ); /* IE6-9 */
 }
-.main_wrapper{
-
-}
-.main_container{
-	width:900px;
-	margin:20px auto;
-}
+input.input_text_small{width: 75px;}
+input.input_text_medium{width: 150px;}
+input.input_text_large{width: 250px;}
+input.input_submit_small{padding:7px;}
+input.input_submit_medium{padding:15px;}
+input.input_submit_large{padding:22px;}
+.main_wrapper{}
+.main_container{width:900px;margin:20px auto;}
 #body_header{
 	width:100%;
 	height:80px;
@@ -93,9 +85,6 @@ input[type="submit"]:hover{
 		height:80px;
 		float:right;
 	}
-		#obj_user_login form{
-			margin:10px;
-		}
         
 #body_navbar{
 	width:100%;
@@ -134,14 +123,15 @@ input[type="submit"]:hover{
 			text-shadow:2px 2px 0px #FFFFFF;
 		}
 		#obj_menu li a:hover{
-			background: rgb(232,232,232); /* Old browsers */
-			background: -moz-linear-gradient(top,  rgba(232,232,232,1) 0%, rgba(127,127,127,1) 100%); /* FF3.6+ */
-			background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(232,232,232,1)), color-stop(100%,rgba(127,127,127,1))); /* Chrome,Safari4+ */
-			background: -webkit-linear-gradient(top,  rgba(232,232,232,1) 0%,rgba(127,127,127,1) 100%); /* Chrome10+,Safari5.1+ */
-			background: -o-linear-gradient(top,  rgba(232,232,232,1) 0%,rgba(127,127,127,1) 100%); /* Opera 11.10+ */
-			background: -ms-linear-gradient(top,  rgba(232,232,232,1) 0%,rgba(127,127,127,1) 100%); /* IE10+ */
-			background: linear-gradient(top,  rgba(232,232,232,1) 0%,rgba(127,127,127,1) 100%); /* W3C */
-			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8e8e8', endColorstr='#7f7f7f',GradientType=0 ); /* IE6-9 */
+			background: rgb(201,201,201); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(201,201,201,1) 0%, rgba(127,127,127,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(201,201,201,1)), color-stop(100%,rgba(127,127,127,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(127,127,127,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(127,127,127,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(127,127,127,1) 100%); /* IE10+ */
+background: linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(127,127,127,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c9c9c9', endColorstr='#7f7f7f',GradientType=0 ); /* IE6-9 */
+
 
 
 		}
