--- a/css/main.css
+++ b/css/main.css
@@ -8,14 +8,14 @@ colors{
 body{
 	direction:rtl;
 	font-family:Tahoma, Geneva, sans-serif;
-background: rgb(107,107,107); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(107,107,107,1) 1%, rgba(178,178,178,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(107,107,107,1)), color-stop(100%,rgba(178,178,178,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(107,107,107,1) 1%,rgba(178,178,178,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(107,107,107,1) 1%,rgba(178,178,178,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(107,107,107,1) 1%,rgba(178,178,178,1) 100%); /* IE10+ */
-background: linear-gradient(top,  rgba(107,107,107,1) 1%,rgba(178,178,178,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6b6b6b', endColorstr='#b2b2b2',GradientType=0 ); /* IE6-9 */
+	background: rgb(107,107,107); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(107,107,107,1) 1%, rgba(178,178,178,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(107,107,107,1)), color-stop(100%,rgba(178,178,178,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(107,107,107,1) 1%,rgba(178,178,178,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(107,107,107,1) 1%,rgba(178,178,178,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(107,107,107,1) 1%,rgba(178,178,178,1) 100%); /* IE10+ */
+	background: linear-gradient(top,  rgba(107,107,107,1) 1%,rgba(178,178,178,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6b6b6b', endColorstr='#b2b2b2',GradientType=0 ); /* IE6-9 */
 	color:#000;
 	height:auto;
 	background-attachment:fixed;
@@ -70,6 +70,10 @@ input.input_submit_medium{padding:15px;}
 input.input_submit_large{padding:22px;}
 .main_wrapper{}
 .main_container{width:900px;margin:20px auto;}
+.block_raw{width:890px;margin:5px;}
+.block_column_50{display:inline-block;width:49%;vertical-align:top;}
+.block_column_30{display:inline-block;width:29%;vertical-align:top;}
+.block_column_70{display:inline-block;width:69%;vertical-align:top;}
 #body_header{
 	width:100%;
 	height:80px;
@@ -124,16 +128,13 @@ input.input_submit_large{padding:22px;}
 		}
 		#obj_menu li a:hover{
 			background: rgb(201,201,201); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(201,201,201,1) 0%, rgba(127,127,127,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(201,201,201,1)), color-stop(100%,rgba(127,127,127,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(127,127,127,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(127,127,127,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(127,127,127,1) 100%); /* IE10+ */
-background: linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(127,127,127,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c9c9c9', endColorstr='#7f7f7f',GradientType=0 ); /* IE6-9 */
-
-
-
+			background: -moz-linear-gradient(top,  rgba(201,201,201,1) 0%, rgba(127,127,127,1) 100%); /* FF3.6+ */
+			background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(201,201,201,1)), color-stop(100%,rgba(127,127,127,1))); /* Chrome,Safari4+ */
+			background: -webkit-linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(127,127,127,1) 100%); /* Chrome10+,Safari5.1+ */
+			background: -o-linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(127,127,127,1) 100%); /* Opera 11.10+ */
+			background: -ms-linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(127,127,127,1) 100%); /* IE10+ */
+			background: linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(127,127,127,1) 100%); /* W3C */
+			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c9c9c9', endColorstr='#7f7f7f',GradientType=0 ); /* IE6-9 */
 		}
 		#obj_menu li a.active{
 			
@@ -149,9 +150,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c9c9c9', end
 		}
 #body_content{
 	width:100%;
-	height:300px;
 	background:#333;
 	margin-top:5px;
+	padding:5px 0px 10px 0px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -165,6 +166,20 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c9c9c9', end
 	background: linear-gradient(top, #e8e8e8 0%,#b7b7b7 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8e8e8', endColorstr='#b7b7b7',GradientType=0 ); /* IE6-9 */
 }
+	#obj_slider{
+		display:block;
+		height:250px;
+		width:600px;
+		border:1px solid #000;
+		background: rgb(201,201,201); /* Old browsers */
+		background: -moz-linear-gradient(top,  rgba(201,201,201,1) 0%, rgba(127,127,127,1) 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(201,201,201,1)), color-stop(100%,rgba(127,127,127,1))); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(127,127,127,1) 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(127,127,127,1) 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(127,127,127,1) 100%); /* IE10+ */
+		background: linear-gradient(top,  rgba(201,201,201,1) 0%,rgba(127,127,127,1) 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c9c9c9', endColorstr='#7f7f7f',GradientType=0 ); /* IE6-9 */
+	}
 #body_footer{
 	width:100%;
 	padding:5px;
