--- a/css/main.css
+++ b/css/main.css
@@ -8,14 +8,18 @@ colors{
 body{
 	direction:rtl;
 	font-family:Tahoma, Geneva, sans-serif;
-	background: rgb(107,107,107); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(107,107,107,1) 1%, rgba(178,178,178,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(107,107,107,1)), color-stop(100%,rgba(178,178,178,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(107,107,107,1) 1%,rgba(178,178,178,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(107,107,107,1) 1%,rgba(178,178,178,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(107,107,107,1) 1%,rgba(178,178,178,1) 100%); /* IE10+ */
-	background: linear-gradient(top,  rgba(107,107,107,1) 1%,rgba(178,178,178,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6b6b6b', endColorstr='#b2b2b2',GradientType=0 ); /* IE6-9 */
+	background-color:#333;
+	background: rgb(30,87,153); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(30,87,153,1) 0%, rgba(125,185,232,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(30,87,153,1)), color-stop(100%,rgba(125,185,232,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(30,87,153,1) 0%,rgba(125,185,232,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(30,87,153,1) 0%,rgba(125,185,232,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(30,87,153,1) 0%,rgba(125,185,232,1) 100%); /* IE10+ */
+background: linear-gradient(top,  rgba(30,87,153,1) 0%,rgba(125,185,232,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
+
+
+
 	color:#000;
 	height:auto;
 	background-attachment:fixed;
