--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,8 @@
 colors{
 	#106284
 	#001525
+	
+	#2481C9
 }
 */
 *{direction:rtl;margin:0;padding:0;text-decoration:none;behavior:url(border-radius.htc);}
@@ -10,18 +12,18 @@ body{
 	font-family:Tahoma, Geneva, sans-serif;
 	background-color:#333;
 	background: rgb(24,71,124); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(24,71,124,1) 0%, rgba(36,129,201,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(24,71,124,1)), color-stop(100%,rgba(36,129,201,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(24,71,124,1) 0%,rgba(36,129,201,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(24,71,124,1) 0%,rgba(36,129,201,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(24,71,124,1) 0%,rgba(36,129,201,1) 100%); /* IE10+ */
-background: linear-gradient(top,  rgba(24,71,124,1) 0%,rgba(36,129,201,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#18477c', endColorstr='#2481c9',GradientType=0 ); /* IE6-9 */
+	background: -moz-linear-gradient(top,  rgba(24,71,124,1) 0%, rgba(36,129,201,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(24,71,124,1)), color-stop(100%,rgba(36,129,201,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(24,71,124,1) 0%,rgba(36,129,201,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(24,71,124,1) 0%,rgba(36,129,201,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(24,71,124,1) 0%,rgba(36,129,201,1) 100%); /* IE10+ */
+	background: linear-gradient(top,  rgba(24,71,124,1) 0%,rgba(36,129,201,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#18477c', endColorstr='#2481c9',GradientType=0 ); /* IE6-9 */
 	color:#000;
 	height:auto;
 	background-attachment:fixed;
 }
-a{color:#000;}a:hover{color:#FFF;text-shadow:1px 1px 0px #000;}
+a{color:#000;}a:hover{text-decoration:underline;}
 input{
 	padding:5px;
 	margin:2px;
@@ -64,6 +66,7 @@ input[type="submit"]:hover{
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8e8e8', endColorstr='#7f7f7f',GradientType=0 ); /* IE6-9 */
 }
 /*
+	Example:
 	<div class="block_raw padding_5">
 		<span class="color_steel padding_5 radius_5 shadow_box margin_15"><a href="#">ראשי</a> >> <a href="#">כתבות</a><span>
 	</div>
@@ -112,13 +115,13 @@ input[type="submit"]:hover{
 }
 .color_blue{
 	background: rgb(36,129,201); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(36,129,201,1) 0%, rgba(24,71,124,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(36,129,201,1)), color-stop(100%,rgba(24,71,124,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(36,129,201,1) 0%,rgba(24,71,124,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(36,129,201,1) 0%,rgba(24,71,124,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(36,129,201,1) 0%,rgba(24,71,124,1) 100%); /* IE10+ */
-background: linear-gradient(top,  rgba(36,129,201,1) 0%,rgba(24,71,124,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2481c9', endColorstr='#18477c',GradientType=0 ); /* IE6-9 */
+	background: -moz-linear-gradient(top,  rgba(36,129,201,1) 0%, rgba(24,71,124,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(36,129,201,1)), color-stop(100%,rgba(24,71,124,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(36,129,201,1) 0%,rgba(24,71,124,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(36,129,201,1) 0%,rgba(24,71,124,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(36,129,201,1) 0%,rgba(24,71,124,1) 100%); /* IE10+ */
+	background: linear-gradient(top,  rgba(36,129,201,1) 0%,rgba(24,71,124,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2481c9', endColorstr='#18477c',GradientType=0 ); /* IE6-9 */
 
 }
 input.input_text_small{width: 75px;}
@@ -127,12 +130,6 @@ input.input_text_large{width: 250px;}
 input.input_submit_small{padding:7px;}
 input.input_submit_medium{padding:15px;}
 input.input_submit_large{padding:22px;}
-.main_wrapper{}
-.main_container{width:900px;margin:20px auto;}
-.block_raw{width:100%;}
-.block_column_50{display:inline-block;width:49%;vertical-align:top;}
-.block_column_30{display:inline-block;width:29%;vertical-align:top;}
-.block_column_70{display:inline-block;width:69%;vertical-align:top;}
 .display_block{display:block;}
 .display_inlineblock{display:inline-block;}
 .display_none{display:none;}
@@ -155,9 +152,19 @@ input.input_submit_large{padding:22px;}
 .float_right{float:right;}
 .float_left{float:left;}
 .float_center{float:center;}
+
+
+.main_wrapper{}
+.main_container{width:900px;margin:20px auto;}
+.block_raw{width:100%;}
+.block_column_50{display:inline-block;width:49%;vertical-align:top;}
+.block_column_30{display:inline-block;width:29%;vertical-align:top;}
+.block_column_70{display:inline-block;width:69%;vertical-align:top;}
+
 #body_header{
 	width:100%;
 	height:80px;
+	margin:0px 0px 5px;
 }
 	#obj_logo{
 		width:365px;
@@ -173,7 +180,6 @@ input.input_submit_large{padding:22px;}
 #body_navbar{
 	width:100%;
 	height:50px;
-	margin: 2px 8px 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -199,13 +205,13 @@ input.input_submit_large{padding:22px;}
 		}
 		#obj_menu li a:hover{
 			background: rgb(91,152,198); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(91,152,198,1) 0%, rgba(38,113,193,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(91,152,198,1)), color-stop(100%,rgba(38,113,193,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(91,152,198,1) 0%,rgba(38,113,193,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(91,152,198,1) 0%,rgba(38,113,193,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(91,152,198,1) 0%,rgba(38,113,193,1) 100%); /* IE10+ */
-background: linear-gradient(top,  rgba(91,152,198,1) 0%,rgba(38,113,193,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b98c6', endColorstr='#2671c1',GradientType=0 ); /* IE6-9 */
+			background: -moz-linear-gradient(top,  rgba(91,152,198,1) 0%, rgba(38,113,193,1) 100%); /* FF3.6+ */
+			background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(91,152,198,1)), color-stop(100%,rgba(38,113,193,1))); /* Chrome,Safari4+ */
+			background: -webkit-linear-gradient(top,  rgba(91,152,198,1) 0%,rgba(38,113,193,1) 100%); /* Chrome10+,Safari5.1+ */
+			background: -o-linear-gradient(top,  rgba(91,152,198,1) 0%,rgba(38,113,193,1) 100%); /* Opera 11.10+ */
+			background: -ms-linear-gradient(top,  rgba(91,152,198,1) 0%,rgba(38,113,193,1) 100%); /* IE10+ */
+			background: linear-gradient(top,  rgba(91,152,198,1) 0%,rgba(38,113,193,1) 100%); /* W3C */
+			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b98c6', endColorstr='#2671c1',GradientType=0 ); /* IE6-9 */
 
 		}
 		#obj_menu li a.active{
@@ -286,7 +292,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b98c6', end
 			height:70px;
 			width:55px;
 			background-color:#333;
+			outline:3px solid #000;
 		}
-		#obj_gamelist li span{
-			
+		#obj_gamelist li img:hover{
+			outline:3px solid #2481C9;
 		}
