Login text color

--- a/css/main.css
+++ b/css/main.css
@@ -177,6 +177,7 @@ input.input_submit_large{padding:22px;}
 		width:350px;
 		height:80px;
 		float:right;
+        color:#FAFAFA;
 	}
 #body_navbar{
 	width:100%;
