--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@ body{
 	font-family:Tahoma, Geneva, sans-serif;
 	color:#000;
 	height:auto;
-	background-attachment:fixed;
 }
 a{color:#000;}a:hover{text-decoration:underline;}
 input{
@@ -124,16 +123,12 @@ input[type="submit"]:hover{
 	background: linear-gradient(top,  rgba(23,23,23,1) 0%,rgba(51,51,51,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#171717', endColorstr='#333333',GradientType=0 ); /* IE6-9 */
 }
-.color_bluer{
-	background-color:#333;
-	background: rgb(24,71,124); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(24,71,124,1) 0%, rgba(36,129,201,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(24,71,124,1)), color-stop(100%,rgba(36,129,201,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(24,71,124,1) 0%,rgba(36,129,201,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(24,71,124,1) 0%,rgba(36,129,201,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(24,71,124,1) 0%,rgba(36,129,201,1) 100%); /* IE10+ */
-	background: linear-gradient(top,  rgba(24,71,124,1) 0%,rgba(36,129,201,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#18477c', endColorstr='#2481c9',GradientType=0 ); /* IE6-9 */
+.color_bluer_background{
+	background-attachment:fixed;
+	background-color:#001b36;
+	background-image:url('../imgs/background.jpg');
+	background-repeat:no-repeat;
+	background-position:center top;
 }
 input.input_text_small{width: 75px;}
 input.input_text_medium{width: 150px;}
