--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,17 @@ input[type="submit"]:hover{
 	background: linear-gradient(top,  rgba(36,129,201,1) 0%,rgba(24,71,124,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2481c9', endColorstr='#18477c',GradientType=0 ); /* IE6-9 */
 }
+.color_blue_reverse{
+	background: #18477c; /* Old browsers */
+background: -moz-linear-gradient(top,  #18477c 0%, #2481c9 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#18477c), color-stop(100%,#2481c9)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #18477c 0%,#2481c9 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #18477c 0%,#2481c9 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #18477c 0%,#2481c9 100%); /* IE10+ */
+background: linear-gradient(top,  #18477c 0%,#2481c9 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#18477c', endColorstr='#2481c9',GradientType=0 ); /* IE6-9 */
+
+}
 .color_blackgray{
 	background: rgb(23,23,23); /* Old browsers */
 	background: -moz-linear-gradient(top,  rgba(23,23,23,1) 0%, rgba(51,51,51,1) 100%); /* FF3.6+ */
@@ -123,10 +134,10 @@ input[type="submit"]:hover{
 	background: linear-gradient(top,  rgba(23,23,23,1) 0%,rgba(51,51,51,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#171717', endColorstr='#333333',GradientType=0 ); /* IE6-9 */
 }
-.color_bluer_background{
+.bg{
 	background-attachment:fixed;
 	background-color:#001b36;
-	background-image:url('../imgs/background.jpg');
+	background-image:url('../imgs/bg5.jpg');
 	background-repeat:no-repeat;
 	background-position:center top;
 }
@@ -167,16 +178,24 @@ input.input_submit_large{padding:22px;}
 .block_column_30{display:inline-block;width:29%;vertical-align:top;}
 .block_column_70{display:inline-block;width:69%;vertical-align:top;}
 
+.title_block{display:block;color:#FFF;background-color:#000;}
+.title_block a{color:#FFF;}
+.title_block p{color:#999;}
+
+.text_red{color:red;}
+.text_blue{color:#2481C9;}
+.text_white{color:#FFF;}
 #body_header{
 	width:100%;
 	height:90px;
-	margin:0px 0px 5px;
+	background-repeat:no-repeat;
 }
 	#obj_logo{
 		width:365px;
 		height:80px;
 		float:left;
-		background:url(../imgs/logo-crystal.png);
+		margin:4px 0px 0px 10px;
+		background:url(../imgs/logo-redcrystal.png);
 	}
 	#obj_user_login{
 		width:350px;
@@ -186,9 +205,12 @@ input.input_submit_large{padding:22px;}
 #body_navbar{
 	width:100%;
 	height:50px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
+	-webkit-border-top-left-radius: 5px;
+	-webkit-border-top-right-radius: 5px;
+	-moz-border-radius-topleft: 5px;
+	-moz-border-radius-topright: 5px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
 	box-shadow:0px 2px 5px #000;
 }
 	#obj_menu{
@@ -234,11 +256,13 @@ input.input_submit_large{padding:22px;}
 		}
 #body_content{
 	width:100%;
-	margin-top:10px;
-	padding:5px 0px 25px 0px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
+	padding:0px 0px 25px 0px;
+	-webkit-border-bottom-right-radius: 5px;
+-webkit-border-bottom-left-radius: 5px;
+-moz-border-radius-bottomright: 5px;
+-moz-border-radius-bottomleft: 5px;
+border-bottom-right-radius: 5px;
+border-bottom-left-radius: 5px;
 	box-shadow:0px 2px 5px #000;
 	background: #e8e8e8; /* Old browsers */
 	background: -moz-linear-gradient(top, #e8e8e8 0%, #b7b7b7 100%); /* FF3.6+ */
