--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#18477c', end
 .bg{
 	background-attachment:fixed;
 	background-color:#001b36;
-	background-image:url('../imgs/bg5.jpg');
+	background-image:url('../imgs/background.jpg');
 	background-repeat:no-repeat;
 	background-position:center top;
 }
@@ -188,20 +188,20 @@ input.input_submit_large{padding:22px;}
 #body_header{
 	width:100%;
 	height:90px;
-	background-repeat:no-repeat;
 }
 	#obj_logo{
 		width:365px;
 		height:80px;
 		float:left;
-		margin:4px 0px 0px 10px;
 		background:url(../imgs/logo-redcrystal.png);
+	}
+	#obj_logo_bg{
 	}
 	#obj_user_login{
 		width:350px;
 		height:80px;
         color:#FAFAFA;
-	}
+	}	
 #body_navbar{
 	width:100%;
 	height:50px;
